--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -5,10 +5,11 @@ layout: default
   <header class="post-header">
     <h1 class="post-title">
       {% if site.title == 'blank' %}
-        <span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }}
+        <span class="font-weight-bold">{{ site.first_name }}</span>
+        {{ site.middle_name }}
         {{ site.last_name }}
       {% else %}
-        {{ site.title }} 
+        {{ site.title }}
       {% endif %}
     </h1>
     <p class="desc">{{ page.subtitle }}</p>
@@ -23,13 +24,12 @@ layout: default
             {% assign profile_image_class = 'img-fluid z-depth-1 rounded-circle' %}
           {% else %}
             {% assign profile_image_class = 'img-fluid z-depth-1
-      rounded' %}
+                                  rounded' %}
           {% endif %}
           {% capture sizes %}(min-width: {{site.max_width}}) {{ site.max_width | minus: 30 | times: 0.3}}px, (min-width: 576px)
       30vw, 95vw"{% endcapture %}
           {%
-            include figure.liquid loading="eager" path=profile_image_path class=profile_image_class sizes=sizes alt=page.profile.image
-            cache_bust=true
+            include figure.liquid loading="eager" path=profile_image_path class=profile_image_class sizes=sizes alt=page.profile.image cache_bust=true
           %}
         {% endif %}
         {% if page.profile.more_info %}
@@ -48,13 +48,13 @@ layout: default
       {% include news.liquid limit=true %}
     {% endif %}
 
-  <!-- Research Summary -->
-  {% if page.research_summary %}
-    <h2>
-      <a href="{{ '/research/' | relative_url }}" style="color: inherit">Research Summary</a>
-    </h2>
-    {% include research_summary.liquid %}
-  {% endif %}
+    <!-- Research Summary -->
+    {% if page.research_summary %}
+      <h2>
+        <a href="{{ '/research/' | relative_url }}" style="color: inherit">Research Summary</a>
+      </h2>
+      {% include research_summary.liquid %}
+    {% endif %}
 
     <!-- Latest posts -->
     {% if site.latest_posts.enabled %}
