--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -15,6 +15,8 @@ $max-content-width: {{ site.max_width }};
   "cv",
   "tabs",
   "typograms",
+  "blog",
+  "archive",
   "font-awesome/fontawesome",
   "font-awesome/brands",
   "font-awesome/solid",
